<?xml version="1.0"?>
<package format="2">
  <name>vortex_m3_sonar_driver</name>
  <version>0.0.0</version>
  <description>A driver for the Kongsberg M3 Sonar</description>
  <maintainer email="kolaseirik@gmail.com">Eirik Kolås</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>librapidxml-dev</depend>
</package>
