<?xml version="1.0"?>
<package format="2">
  <name>vortex-m3-sonar-driver</name>
  <version>0.0.0</version>
  <description>A driver for the Kongsberg M3 Sonar</description>
  <maintainer email="kolaseirik@gmail.com">Eirik Kolås</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>librapidxml-dev</depend>
  <depend>eigen</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
